  - Remove "Use network broadcast for device discovery" setting
  - Add "Use HTTP cloud-based device discovery" advanced setting
  - Fix bug causing multi-homed HDHomeRun devices from being detected during broadcast device discovery
  - Fix bug introduced in v2.0.0 preventing the "Delete episode" string from appearing in context menu(s)

v2.0.3 (2019.05.20)
  - Adapt to HDHomeRun RECORD engine 20190516beta2 breaking changes
  - Use HTTP POST method when setting tuner channel visibility flags

v2.0.2 (2019.05.08)
  - Update SQLite database engine to version 3.28.0
  - Prevent multiple Kodi threads from simultaneously requesting EPG data
  - Prevent individually malformed EPG data request results from aborting all remaining requests
  - Fix bug that allowed extraneous EPG entries to be transferred to Kodi
  - Fix bug that prevented successfully setting channel visibility flags
  - Fix bug in database layer that could cause unhandled exceptions processing NULL column values

v2.0.1 (2019.04.12)
  - Fix bug introduced in v2.0.0 preventing any EPG data from being processed

v2.0.0 (2019.04.09)
  - Update SQLite database engine to version 3.27.2
  - Update cURL library to version 7.64.1
  - Add "Invalidate tuner device authorization codes after" advanced setting
  - Change default discovery interval from 5 minutes to 1 hour
  - Change default lineup discovery interval from 10 minutes to 45 minutes
  - Remove "Disable discovery of HDHomeRun RECORD devices" advanced setting
  - Retrieve DVR service authorization flag for tuner(s) during device discovery
  - Maintain database timestamps indicating when all backend data was last discovered
  - Log discovered HDHomeRun devices after device discovery completes
  - Prevent redundant rediscovery of devices and channel lineups during PVR startup task
  - Use separate HTTP connection and DNS lookup cache for Electronic Program Guide (EPG) requests