@@ -5,6 +5,7 @@ v2.1.0 (2019.06.xx)
   - Add "Use HTTP cloud-based device discovery" advanced setting
   - Fix bug causing multi-homed HDHomeRun devices from being detected during broadcast device discovery
   - Fix bug introduced in v2.0.0 preventing the "Delete episode" string from appearing in context menu(s)
+  - Use HTTP POST method when modifying backend recording rules
 
 v2.0.3 (2019.05.20)
   - Adapt to HDHomeRun RECORD engine 20190516beta2 breaking changes
